# ai-legal-assistant

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/src/: document_processor.py  intent.py  scrape.py  tempCodeRunnerFile.py
backend/src/bns_db/: chroma.sqlite3
bns_db/5cd52518-b379-4936-bea5-64b9698a2fbe/: index_metadata.pickle
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/components/: ChatInterface.jsx  Header.jsx  IntentDisplay.jsx  QueryInput.jsx  StatsDisplay.jsx
